--- a/Projects/Project/Project/App.xaml
+++ b/Projects/Project/Project/App.xaml
@@ -4,10 +4,12 @@
              xmlns:local="clr-namespace:Project" StartupUri="View/MainWindow.xaml" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              d1p1:Ignorable="d" 
-             xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
-  <Application.Resources>
-    <ResourceDictionary>
-      <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:Project.ViewModel" />
-    </ResourceDictionary>
-  </Application.Resources>
+             xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:helpers="clr-namespace:Project.Helpers">
+    <Application.Resources>
+        <ResourceDictionary>
+            <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:Project.ViewModel" />
+            <helpers:MessageListener x:Key="MessageListener"  />
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
