--- a/Projects/Project/Project/View/MainWindow.xaml
+++ b/Projects/Project/Project/View/MainWindow.xaml
@@ -14,6 +14,10 @@
         Icon="/Resources/Icon DB.png"
         DataContext="{Binding Main, Source={StaticResource Locator}}">
 
+    <Window.IsEnabled>
+        <Binding Path="BindableProperty" Source="{StaticResource MessageListener}" />
+    </Window.IsEnabled>
+    
     <Window.Resources>
         <converters:AgeConverter x:Key="AgeConverter" />
         <converters:GenderConverter x:Key="GenderConverter" />
