--- a/Projects/Project/Project/View/MainWindow.xaml
+++ b/Projects/Project/Project/View/MainWindow.xaml
@@ -11,13 +11,13 @@
         Height="300" MaxWidth="600" 
         SizeToContent="Width"
         WindowStartupLocation="CenterScreen"
-        Icon="/Resources/Icon DB.png"
+        Icon="/Images/Icon DB.png"
         DataContext="{Binding Main, Source={StaticResource Locator}}">
 
     <Window.IsEnabled>
         <Binding Path="BindableProperty" Source="{StaticResource MessageListener}" />
     </Window.IsEnabled>
-    
+
     <Window.Resources>
         <converters:AgeConverter x:Key="AgeConverter" />
         <converters:GenderConverter x:Key="GenderConverter" />
@@ -40,7 +40,8 @@
                     <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ErrorTemplate}"></Setter>
                     <Style.Triggers>
                         <Trigger Property="Validation.HasError" Value="True">
-                            <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}" />
+                            <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self}, 
+                                                               Path=(Validation.Errors).[0].ErrorContent}" />
                         </Trigger>
                     </Style.Triggers>
                 </Style>
@@ -54,8 +55,39 @@
                 </Style>
             </Style.Resources>
         </Style>
+
+        <Style x:Key="ButtonsStyle" TargetType="StackPanel">
+            <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+            <Setter Property="VerticalAlignment" Value="Center"></Setter>
+            <Setter Property="Orientation" Value="Horizontal"></Setter>
+            <Setter Property="Margin" Value="1,2,1,2"></Setter>
+            <Style.Resources>
+                <Style TargetType="Button">
+                    <Setter Property="Width" Value="90"></Setter>
+                    <Setter Property="Height" Value="30"></Setter>
+                    <Style.Resources>
+                        <Style TargetType="StackPanel">
+                            <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+                            <Setter Property="VerticalAlignment" Value="Center"></Setter>
+                            <Setter Property="Orientation" Value="Horizontal"></Setter>
+                            <Style.Resources>
+                                <Style TargetType="Image">
+                                    <Setter Property="Width" Value="16"></Setter>
+                                    <Setter Property="Height" Value="16"></Setter>
+                                </Style>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="Margin" Value="5,0,0,0"></Setter>
+                                    <Setter Property="VerticalAlignment" Value="Center"></Setter>
+                                    <Setter Property="TextWrapping" Value="NoWrap"></Setter>
+                                </Style>
+                            </Style.Resources>
+                        </Style>
+                    </Style.Resources>
+                </Style>
+            </Style.Resources>
+        </Style>
     </Window.Resources>
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
@@ -80,59 +112,84 @@
             </Border>
         </Grid>
 
-        <ListView Grid.Row="0"
-                  IsSynchronizedWithCurrentItem="True"
-                  ItemsSource="{Binding StudentsView}"
-                  AlternationCount="2" HorizontalAlignment="Stretch" Background="LightGray" 
-                  SelectedIndex="{Binding SelectedIndex}"
-                  SelectedItem="{Binding SelectedStudent, ValidatesOnDataErrors=True, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                  Visibility="{Binding StudentsView.Count, Converter={StaticResource VisibilityConverter}}"
-                  Name="ListView">
+        <Border Grid.Row="0" x:Name="brdCustomers"
+                    Margin="0"
+                    Background="Blue"
+                    BorderBrush="LightGray"
+                    BorderThickness="1">
 
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Полное имя" Width="150" DisplayMemberBinding="{Binding FullName}"></GridViewColumn>
-                    <GridViewColumn Header="Возраст"  Width="60"  DisplayMemberBinding="{Binding Age, Converter={StaticResource AgeConverter}}"></GridViewColumn>
-                    <GridViewColumn Header="Пол" Width="70" DisplayMemberBinding="{Binding Gender, Converter={StaticResource GenderConverter}}"></GridViewColumn>
-                </GridView>
-            </ListView.View>
+            <DataGrid x:Name="mainDataGrid"
+                      Margin="5,5,5,0"
+                      AlternatingRowBackground="Red"
+                      CanUserAddRows="False"
+                      CanUserDeleteRows="False"
+                      CanUserReorderColumns="True"
+                      CanUserResizeColumns="True"
+                      CanUserResizeRows="True"
+                      SelectionMode="Extended"
+                      SelectionUnit="FullRow"
+                      SelectedIndex="0"
+                      AutoGenerateColumns="False"
+                      SelectedItem="{Binding SelectedStudent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                      ItemsSource="{Binding Path=CollectionOfStudent, Mode=OneWay}">
 
-            <ListView.ItemContainerStyle>
-                <Style TargetType="{x:Type ListViewItem}">
-                    <Setter Property="HorizontalContentAlignment" Value="Center" />
-                    <Setter Property="Padding" Value="2"></Setter>
-                    <Style.Triggers>
-                        <Trigger Property="ItemsControl.AlternationIndex"  Value="0">
-                            <Setter Property="Background" Value="Aqua" />
-                        </Trigger>
-                        <Trigger Property="ItemsControl.AlternationIndex"  Value="1">
-                            <Setter Property="Background" Value="DarkOrange" />
-                        </Trigger>
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Полное имя" MinWidth="100"
+                                        Binding="{Binding FullName, Mode=OneWay}">
+                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="Возраст"
+                                        Binding="{Binding Age, Mode=OneWay}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Пол"
+                                        Binding="{Binding Gender, Mode=OneWay}"></DataGridTextColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Border>
 
-                        <Trigger Property="IsSelected" Value="True">
-                            <Setter Property="Background" Value="LimeGreen"/>
-                            <Setter Property="Foreground" Value="White"/>
-                            <Setter Property="BorderThickness" Value="1"/>
-                            <Setter Property="BorderBrush" Value="Black"/>
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </ListView.ItemContainerStyle>
-        </ListView>
-
-        <StackPanel  Grid.Row="1" HorizontalAlignment="Center" Orientation="Horizontal" Margin="1,2,1,2">
-            <Button Content="Добавить" Margin="1" MinWidth="40" Command="{Binding AddCommand, Mode=OneWay}" />
-            <Button Content="Удалить" Margin="1" MinWidth="40" Command="{Binding DeleteCommand, Mode=OneWay}"
-                    CommandParameter="{Binding SelectedItems, ElementName=ListView}"></Button>
-            <Button Content="Загрузить" Margin="1" MinWidth="40" Command="{Binding LoadCommand, Mode=OneWay}" />
-            <Button Content="Сохранить" Margin="1" MinWidth="40" Command="{Binding SaveCommand, Mode=OneWay}" />
-            <Button Content="Очистить" Margin="1" MinWidth="40" Command="{Binding ClearCommand, Mode=OneWay}" />
-            <Button Content="Чек" Margin="1" MinWidth="40" Command="{Binding StudentModel.OkCommand, Mode=OneWay}"  />
+        <StackPanel Grid.Row="1" Style="{Binding Mode=OneWay, Source={StaticResource ButtonsStyle}}">
+            <Button Command="{Binding AddCommand}">
+                <StackPanel>
+                    <Image Source="/Images/Load.png" />
+                    <TextBlock Text="Добавить" />
+                </StackPanel>
+            </Button>
+            <Button Command="{Binding DeleteCommand}" CommandParameter="{Binding SelectedItems, ElementName=mainDataGrid}">
+                <StackPanel>
+                    <Image Source="/Images/Delete.png" />
+                    <TextBlock Text="Удалить" />
+                </StackPanel>
+            </Button>
+            <Button Command="{Binding AddCommand}">
+                <StackPanel>
+                    <Image Source="/Images/Edit.png" />
+                    <TextBlock Text="Изменить" />
+                </StackPanel>
+            </Button>
+            <Button Command="{Binding LoadCommand}">
+                <StackPanel>
+                    <Image Source="/Images/Load.png" />
+                    <TextBlock Text="Загрузить" />
+                </StackPanel>
+            </Button>
+            <Button Command="{Binding SaveCommand}">
+                <StackPanel>
+                    <Image Source="/Images/Save as.png" />
+                    <TextBlock Text="Сохранить" />
+                </StackPanel>
+            </Button>
+            <Button Command="{Binding ClearCommand}">
+                <StackPanel>
+                    <Image Source="/Images/Clear.png" />
+                    <TextBlock Text="Очистить" />
+                </StackPanel>
+            </Button>
+            <!--<Button Content="Чек" Margin="1" MinWidth="40" Command="{Binding StudentModel.OkCommand, Mode=OneWay}" />-->
         </StackPanel>
 
-        <Border Grid.Row="2">
+        
+
+        <!--<Border Grid.Row="2">
             <Grid>
-                <!--<Grid Visibility="{Binding CollectionOfStudent.Count, Converter={StaticResource VisibilityConverter}}">-->
+                --><!--<Grid Visibility="{Binding CollectionOfStudent.Count, Converter={StaticResource VisibilityConverter}}">--><!--
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
@@ -163,7 +220,7 @@
                     </ComboBox>
                 </StackPanel>
             </Grid>
-        </Border>
+        </Border>-->
     </Grid>
 </Window>
 
