--- a/Projects/Project/Project/Dictionary/Resources.xaml
+++ b/Projects/Project/Project/Dictionary/Resources.xaml
@@ -14,4 +14,35 @@
         <Setter Property="TextWrapping" Value="NoWrap"></Setter>
         <Setter Property="FontSize" Value="14"></Setter>
     </Style>
+
+    <Style x:Key="ButtonsStyle" TargetType="StackPanel">
+        <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+        <Setter Property="VerticalAlignment" Value="Center"></Setter>
+        <Setter Property="Orientation" Value="Horizontal"></Setter>
+        <Setter Property="Margin" Value="1,2,1,2"></Setter>
+        <Style.Resources>
+            <Style TargetType="Button">
+                <Setter Property="Width" Value="90"></Setter>
+                <Setter Property="Height" Value="30"></Setter>
+                <Style.Resources>
+                    <Style TargetType="StackPanel">
+                        <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+                        <Setter Property="VerticalAlignment" Value="Center"></Setter>
+                        <Setter Property="Orientation" Value="Horizontal"></Setter>
+                        <Style.Resources>
+                            <Style TargetType="Image">
+                                <Setter Property="Width" Value="16"></Setter>
+                                <Setter Property="Height" Value="16"></Setter>
+                            </Style>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="Margin" Value="5,0,0,0"></Setter>
+                                <Setter Property="VerticalAlignment" Value="Center"></Setter>
+                                <Setter Property="TextWrapping" Value="NoWrap"></Setter>
+                            </Style>
+                        </Style.Resources>
+                    </Style>
+                </Style.Resources>
+            </Style>
+        </Style.Resources>
+    </Style>
 </ResourceDictionary>
