--- a/Projects/Project/Project/Dictionary/Resources.xaml
+++ b/Projects/Project/Project/Dictionary/Resources.xaml
@@ -13,6 +13,11 @@
         <Setter Property="Padding" Value="2,0,2,0"></Setter>
         <Setter Property="TextWrapping" Value="NoWrap"></Setter>
         <Setter Property="FontSize" Value="14"></Setter>
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
     <Style x:Key="ButtonsStyle" TargetType="StackPanel">
@@ -24,6 +29,7 @@
             <Style TargetType="Button">
                 <Setter Property="Width" Value="90"></Setter>
                 <Setter Property="Height" Value="30"></Setter>
+                
                 <Style.Resources>
                     <Style TargetType="StackPanel">
                         <Setter Property="HorizontalAlignment" Value="Center"></Setter>
